Fix form padding, attempt to fix row spacing, begin adding js comments

--- a/Fall2024/CS202/cardboard/css/cardboard.css
+++ b/Fall2024/CS202/cardboard/css/cardboard.css
@@ -50,10 +50,11 @@ section.card-container {
     background-image: url("../assets/cork-wallet.png");
     background-repeat: repeat;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(16%, 1fr));
+    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(16%, 1fr));
     align-items: stretch;
     column-gap: 1em;
-    row-gap: 2em;
+    row-gap: 1em;
     margin: 1em 5em 6em 5em;
 }
 
@@ -75,7 +76,7 @@ section.card-container {
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
     section.card-container {
         grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
     }
